<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamePlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <TextView
            android:id="@+id/CurrentModule"
            android:textColor="@color/bTColor"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="MOD : NUM"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/CurrentLevel"
            android:textColor="@color/bTColor"
            android:gravity="right"
            android:paddingRight="10dp"
            android:text="LVL : NUM"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <TextView
        android:id="@+id/questionMultipleAnswer"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_alignParentTop="true"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="Multiple Answer Question Display Here"
        android:textColor="@color/bTColor"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

       <LinearLayout
           android:orientation="vertical"
           android:id="@+id/group"
           android:paddingTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">



           <ProgressBar
               android:id="@+id/progressBar"
               style="@style/Widget.AppCompat.ProgressBar.Horizontal"
               android:layout_marginLeft="8dp"
               android:layout_marginRight="8dp"
               android:max="8"
               android:layout_width="match_parent"
               android:layout_height="wrap_content" />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="100dp"
               android:orientation="horizontal">
               <Button
                   android:id="@+id/btnAnswerA"
                   android:textColor="#fff"
                   android:text="Answer A"
                   android:paddingLeft="5dp"
                   android:paddingRight="5dp"
                   android:textStyle="bold"
                   android:textAllCaps="false"
                   android:textSize="20sp"
                   style="@style/Widget.AppCompat.Button.Borderless"
                   android:background="#03a9f4"
                   android:layout_margin="8dp"
                   android:textAlignment="center"
                   android:foreground="?android:attr/selectableItemBackground"
                   android:layout_width="0dp"
                   android:layout_weight="2"
                   android:layout_marginStart="10dp"
                   android:layout_marginEnd="10dp"
                   android:layout_height="match_parent" />

               <Button
                   android:id="@+id/btnAnswerB"
                   android:textColor="#fff"
                   android:text="Answer B"
                   android:textStyle="bold"
                   android:paddingLeft="5dp"
                   android:paddingRight="5dp"
                   android:textAllCaps="false"
                   android:textSize="20sp"
                   style="@style/Widget.AppCompat.Button.Borderless"
                   android:background="#03a9f4"
                   android:layout_margin="8dp"
                   android:textAlignment="center"
                   android:foreground="?android:attr/selectableItemBackground"
                   android:layout_width="0dp"
                   android:layout_weight="2"
                   android:layout_marginStart="10dp"
                   android:layout_marginEnd="10dp"
                   android:layout_height="match_parent" />
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="100dp"
               android:orientation="horizontal">
               <Button
                   android:id="@+id/btnAnswerC"
                   android:textColor="#fff"
                   android:text="Answer C"
                   android:textAllCaps="false"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:paddingLeft="5dp"
                   android:paddingRight="5dp"
                   style="@style/Widget.AppCompat.Button.Borderless"
                   android:background="#03a9f4"
                   android:layout_margin="8dp"
                   android:textAlignment="center"
                   android:foreground="?android:attr/selectableItemBackground"
                   android:layout_width="0dp"
                   android:layout_weight="2"
                   android:layout_marginStart="10dp"
                   android:layout_marginEnd="10dp"
                   android:layout_height="match_parent" />

               <Button
                   android:id="@+id/btnAnswerD"
                   android:textAllCaps="false"
                   android:textColor="#fff"
                   android:text="Answer D"
                   android:paddingLeft="5dp"
                   android:paddingRight="5dp"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   style="@style/Widget.AppCompat.Button.Borderless"
                   android:background="#03a9f4"
                   android:layout_margin="8dp"
                   android:textAlignment="center"
                   android:foreground="?android:attr/selectableItemBackground"
                   android:layout_width="0dp"
                   android:layout_weight="2"
                   android:layout_marginStart="10dp"
                   android:layout_marginEnd="10dp"
                   android:layout_height="match_parent" />
           </LinearLayout>

       </LinearLayout>

    </RelativeLayout>
</RelativeLayout>