...
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"/>

    <EditText
        android:id="@+id/text_username"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#fff"
        android:drawableLeft="@drawable/username"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="2dp" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="260dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:paddingLeft="2dp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat"
...
